1.Containers-VMs/1.3.Kubernetes/namespace-for-app.yaml
apiVersion: v1
kind: Namespace                                            
metadata:
  name: for-deploy                                  
  labels:
    name: itransition
