1.Containers-VMs/1.3.Kubernetes/deployment+service.yaml
apiVersion: apps/v1
kind: Deployment                                           
metadata:
  namespace: for-deploy
  name: app
  labels:
    app: task
     
spec:
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name : app-web
          image: zubik1337/hello-world
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: for-deploy
spec:
  selector:
    project: kgb
  ports:
    - name: app-listener
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30008
  type: NodePort
