1.Containers-VMs/1.3.Kubernetes/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts1
  namespace: for-deploy
spec:
  rules:
  - host: www.dima.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 8000
